# pyMIDAS

./: README.md  pyproject.toml
examples/: auc.py  midas.ipynb  midasR.ipynb
pymidas/: __init__.py  anom.py
